<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            tools:src="@drawable/bg_about_logo" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:id="@+id/ai_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="0.0"
            app:title="@string/version" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:id="@+id/ai_designer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="幼幼保护协会"
            app:title="@string/designer" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:id="@+id/ai_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="iAcn"
            app:title="@string/developer" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/translator"
            app:title="@string/language" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:id="@+id/ai_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="@string/donate_summary"
            app:title="@string/donate" />

        <me.iacn.mbestyle.ui.widget.AboutItem
            android:id="@+id/ai_open_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:summary="https://github.com/iAcn/MBEStyle"
            app:title="@string/open_source" />

    </LinearLayout>

</ScrollView>